<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/select_dinner"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/meal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/breakfast"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/meal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/second_breakfast"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/meal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/midday_meal"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/meal4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/dessert"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/meal5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/afternoon_snack"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/meal6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/supper"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>