<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/meal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:text="@string/provide_meal"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/txt_mealtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/meal_name" />

        <EditText
            android:id="@+id/txt_mealkcal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/kcal" />

        <Button
            android:id="@+id/btn_savemeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/design_default_color_background" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>